[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Pixeled.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/UI/LogowanieScene.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 27
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 31
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="PanelContainer" parent="."]
margin_left = 414.0
margin_top = 294.0
margin_right = 1550.0
margin_bottom = 700.0

[node name="PlayerProfileInput" type="LineEdit" parent="."]
margin_left = 490.0
margin_top = 389.0
margin_right = 1454.0
margin_bottom = 522.0
custom_fonts/font = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 422.0
margin_top = 296.0
margin_right = 1544.0
margin_bottom = 370.0
custom_fonts/font = SubResource( 2 )
text = "Podaj nazwe profilu"
align = 1
valign = 1

[node name="ApplyButton" type="Button" parent="."]
margin_left = 777.0
margin_top = 564.0
margin_right = 1133.0
margin_bottom = 658.0
custom_fonts/font = SubResource( 3 )
disabled = true
text = "Akceptuj"

[connection signal="text_changed" from="PlayerProfileInput" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="ApplyButton" to="." method="_on_Button_pressed"]
